# py312-to-py311

./: .envrc  .gitignore  flake.nix  pyproject.toml
py312-to-py311/: main.py
py312_to_py311/: accessor.py  main.py  rewriting.py  syntax_introductions.py  type_parameters.py  utils.py
tests/: test_main.py
